# table_cards

./: .gitignore  README.md  guestlist.csv  guestlist.xlsx  pyproject.toml  renovate.json
.devcontainer/: devcontainer.json
.github/workflows/: python.yml
src/: table_cards.py
table_cards/: main.py  name_tags.py  table_cards.py  utils.py
tests/: test_table_cards.py
