[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Rafa Molitoris <rafa.molitoris@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.3.0"
openpyxl = "^3.1.2"
reportlab = "^4.2.0"
pandas = "^2.2.2"
pydantic = "^2.7.4"


[tool.poetry.group.tests.dependencies]
setuptools = "^75.0.0"
pylama = "^8.4.1"
pytest = "^8.2.2"
coverage = "^7.5.4"
faker = "^37.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
